--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /*Fuente*/
+  font-family: 'Anton', sans-serif;
+
+  /*Fondo*/
+  background-image: url('https://www.xtrafondos.com/wallpapers/pokemon-unite-8254.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
